--- a/storage/Dockerfile
+++ b/storage/Dockerfile
@@ -1,7 +1,7 @@
 # Builder, tester and runtime container for local development
 FROM minio/minio
 ARG SERVICE_DIR=.
-RUN mkdir -p /service
-WORKDIR /service
-COPY ${SERVICE_DIR} /service
-CMD server /service
+RUN mkdir -p /develop
+WORKDIR /develop
+COPY ${SERVICE_DIR} /develop
+CMD server /develop
