--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,13 +3,13 @@
 #       avoid unnecessary cypress download
 FROM taitounited/cypress:6.1.0
 
-RUN mkdir -p /service
-WORKDIR /service
+RUN mkdir -p /develop
+WORKDIR /develop
 
 ARG SERVICE_DIR=.
 COPY ${SERVICE_DIR}/package.json \
      ${SERVICE_DIR}/package-lock.* \
-     /service/
+     /develop/
 
 ENV NODE_ENV development
 RUN npm install --loglevel warn
