--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -3,18 +3,18 @@
 #       avoid unnecessary cypress download
 FROM taitounited/cypress:6.1.0 as builder
 
-RUN mkdir -p /service
-WORKDIR /service
+RUN mkdir -p /develop
+WORKDIR /develop
 
 ARG SERVICE_DIR=.
 COPY ${SERVICE_DIR}/package.json \
      ${SERVICE_DIR}/package-lock.* \
-     /service/
+     /develop/
 
 ENV NODE_ENV development
 RUN npm ci --loglevel warn
 
-COPY ${SERVICE_DIR} /service
+COPY ${SERVICE_DIR} /develop
 
 ENV BASE_PATH BASE_PATH
 ENV ASSETS_PATH ASSETS_PATH
