--- a/graphql/Dockerfile.build
+++ b/graphql/Dockerfile.build
@@ -2,18 +2,18 @@
 FROM node:lts-alpine as builder
 RUN apk add --update-cache build-base python git fontconfig
 
-RUN mkdir -p /service
-WORKDIR /service
+RUN mkdir -p /develop
+WORKDIR /develop
 
 ARG SERVICE_DIR=.
 COPY ${SERVICE_DIR}/package.json \
      ${SERVICE_DIR}/package-lock.* \
-     /service/
+     /develop/
 
 ENV NODE_ENV development
 RUN npm ci --loglevel warn
 
-COPY ${SERVICE_DIR} /service
+COPY ${SERVICE_DIR} /develop
 
 RUN npm run lint
 RUN npm run unit
@@ -30,9 +30,9 @@ LABEL version=${BUILD_VERSION} \
 RUN mkdir -p /service
 WORKDIR /service
 COPY --from=builder /build .
-COPY --from=builder /service/package.json .
-COPY --from=builder /service/package-lock.json .
-COPY --from=builder /service/node_modules ./node_modules
+COPY --from=builder /develop/package.json .
+COPY --from=builder /develop/package-lock.json .
+COPY --from=builder /develop/node_modules ./node_modules
 
 # Delete development libraries and create node user if it doesn't exist
 RUN npm prune --production && \
