--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -1,14 +1,14 @@
 # Builder, tester and runtime container for local development
 FROM node:lts-buster-slim
 
-RUN mkdir -p /service
-WORKDIR /service
+RUN mkdir -p /develop
+WORKDIR /develop
 
 # Install dependencies and npm libraries on container
 ARG SERVICE_DIR=.
 COPY ${SERVICE_DIR}/install.sh \
      ${SERVICE_DIR}/package* \
-     /service/
+     /develop/
 
 ENV NODE_ENV development
 RUN ./install.sh
@@ -16,7 +16,7 @@ RUN npm install --loglevel warn
 
 # Install site npm libraries on container to speed up builds
 COPY ${SERVICE_DIR}/site/package* \
-     /service/site/
+     /develop/site/
 RUN npm run install-site
 
 # Start development
