--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -15,7 +15,8 @@ RUN ./install.sh
 RUN npm install --loglevel warn
 
 # Install site npm libraries on container to speed up builds
-COPY ${SERVICE_DIR}/site/package* \
+COPY ${SERVICE_DIR}/hooks.json \
+     ${SERVICE_DIR}/site/package* \
      /develop/site/
 RUN npm run install-site
 
