--- a/alternatives/server-django/requirements-dev.txt
+++ b/alternatives/server-django/requirements-dev.txt
@@ -6,11 +6,11 @@
 #
 asgiref==3.3.1            # via django
 attrs==20.3.0             # via pytest
-certifi==2020.12.5        # via requests, sentry-sdk
+certifi==2020.12.5        # via requests
 chardet==4.0.0            # via requests
 debugpy==1.2.1            # via -r requirements.in
 django-cors-headers==3.6.0  # via -r requirements.in
-django==3.1.4             # via -r requirements.in, django-cors-headers, djangorestframework, sentry-sdk
+django==3.1.4             # via -r requirements.in, django-cors-headers, djangorestframework
 djangorestframework==3.12.2  # via -r requirements.in
 flake8==3.8.4             # via -r requirements-dev.in
 idna==2.10                # via requests
@@ -32,10 +32,9 @@ pytest==6.2.1             # via -r requirements-dev.in
 python-json-logger==2.0.1  # via -r requirements.in
 pytz==2020.4              # via django
 requests==2.25.1          # via -r requirements-dev.in
-sentry-sdk[django]==0.19.5  # via -r requirements.in
 sqlparse==0.4.1           # via django
 toml==0.10.2              # via pytest
 typed-ast==1.4.1          # via mypy
 typing-extensions==3.7.4.3  # via importlib-metadata, mypy
-urllib3==1.26.2           # via requests, sentry-sdk
+urllib3==1.26.2           # via requests
 zipp==3.4.0               # via importlib-metadata
