--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -31,10 +31,125 @@ http {
         # auth_basic              "basic";
         # auth_basic_user_file    /run/secrets/BASIC_AUTH_HTPASSWD;
 
+        location /graphql {
+            client_max_body_size 1m;
+
+            proxy_pass http://full-stack-template-graphql:8080;
+            proxy_http_version 1.1;
+
+            # Remove /graphql from path
+            rewrite ^/graphql/?(.*) /$1 break;
+
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /api {
+            client_max_body_size 1m;
+
+            proxy_pass http://full-stack-template-server:8080;
+            proxy_http_version 1.1;
+
+            # Remove /api from path
+            rewrite ^/api/?(.*) /$1 break;
+
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /minio {
+            client_max_body_size 32m;
+
+            proxy_pass http://full-stack-template-storage:9000;
+            proxy_http_version 1.1;
+
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $http_host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /bucket {
+            client_max_body_size 32m;
+
+            proxy_pass http://full-stack-template-storage:9000;
+            proxy_http_version 1.1;
+
+            proxy_buffering off;
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $http_host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /docs {
+            client_max_body_size 1k;
+
+            proxy_pass http://full-stack-template-www:8080;
+            proxy_http_version 1.1;
+
+            # Remove /docs from path
+            rewrite ^/docs/?(.*) /$1 break;
+
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /admin {
+            client_max_body_size 1k;
+
+            proxy_pass http://full-stack-template-admin:8080;
+            proxy_http_version 1.1;
+
+            # Remove /admin from path
+            rewrite ^/admin/?(.*) /$1 break;
+
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
         location / {
             client_max_body_size 1k;
 
-            proxy_pass http://full-stack-template-server:8080;
+            proxy_pass http://full-stack-template-client:8080;
             proxy_http_version 1.1;
 
             proxy_redirect off;
