--- a/alternatives/server-flask/requirements-prod.txt
+++ b/alternatives/server-flask/requirements-prod.txt
@@ -4,25 +4,53 @@
 #
 #    pip-compile requirements-prod.in
 #
-blinker==1.4              # via sentry-sdk
-boto3==1.9.220
-botocore==1.12.220        # via boto3, s3transfer
-certifi==2019.6.16        # via sentry-sdk
-click==7.0                # via flask
-docutils==0.15.2          # via botocore
-flask==1.1.1
-itsdangerous==1.1.0       # via flask
-jinja2==2.10.1            # via flask
-jmespath==0.9.4           # via boto3, botocore
-markupsafe==1.1.1         # via jinja2
-psycopg2-binary==2.8.3
-pydantic==0.32.2
-python-dateutil==2.8.0    # via botocore
-python-json-logger==0.1.11
-s3transfer==0.2.1         # via boto3
-sentry-sdk[flask]==0.11.2
-six==1.12.0               # via python-dateutil
-urllib3==1.25.3           # via botocore, sentry-sdk
-uwsgi==2.0.18
+blinker==1.4
+    # via sentry-sdk
+boto3==1.16.53
+    # via -r requirements.in
+botocore==1.19.53
+    # via
+    #   boto3
+    #   s3transfer
+certifi==2020.12.5
+    # via sentry-sdk
+click==7.1.2
+    # via flask
+flask==1.1.2
+    # via
+    #   -r requirements.in
+    #   sentry-sdk
+itsdangerous==1.1.0
+    # via flask
+jinja2==2.11.2
+    # via flask
+jmespath==0.10.0
+    # via
+    #   boto3
+    #   botocore
+markupsafe==1.1.1
+    # via jinja2
+psycopg2-binary==2.8.6
+    # via -r requirements.in
+pydantic==1.7.3
+    # via -r requirements.in
+python-dateutil==2.8.1
+    # via botocore
+python-json-logger==2.0.1
+    # via -r requirements.in
+s3transfer==0.3.4
+    # via boto3
+sentry-sdk[flask]==0.19.5
+    # via -r requirements.in
+six==1.15.0
+    # via python-dateutil
+urllib3==1.26.2
+    # via
+    #   botocore
+    #   sentry-sdk
+uwsgi==2.0.19.1
+    # via -r requirements-prod.in
 uwsgidecorators==1.1.0
-werkzeug==0.15.5          # via flask
+    # via -r requirements-prod.in
+werkzeug==1.0.1
+    # via flask
