--- a/alternatives/server-django/requirements-dev.txt
+++ b/alternatives/server-django/requirements-dev.txt
@@ -4,37 +4,70 @@
 #
 #    pip-compile requirements-dev.in
 #
-asgiref==3.3.1            # via django
-attrs==20.3.0             # via pytest
-certifi==2020.12.5        # via requests
-chardet==4.0.0            # via requests
-debugpy==1.2.1            # via -r requirements.in
-django-cors-headers==3.6.0  # via -r requirements.in
-django==3.1.4             # via -r requirements.in, django-cors-headers, djangorestframework
-djangorestframework==3.12.2  # via -r requirements.in
-flake8==3.8.4             # via -r requirements-dev.in
-idna==2.10                # via requests
-importlib-metadata==3.3.0  # via flake8, pluggy, pytest
-iniconfig==1.1.1          # via pytest
-json-log-formatter==0.3.0  # via -r requirements.in
-mccabe==0.6.1             # via flake8
-mypy-extensions==0.4.3    # via mypy
-mypy==0.790               # via -r requirements-dev.in
-packaging==20.8           # via pytest
-pluggy==0.13.1            # via pytest
-psycopg2-binary==2.8.6    # via -r requirements.in
-py==1.10.0                # via pytest
-pycodestyle==2.6.0        # via flake8
-pydantic==1.7.3           # via -r requirements.in
-pyflakes==2.2.0           # via flake8
-pyparsing==2.4.7          # via packaging
-pytest==6.2.1             # via -r requirements-dev.in
-python-json-logger==2.0.1  # via -r requirements.in
-pytz==2020.4              # via django
-requests==2.25.1          # via -r requirements-dev.in
-sqlparse==0.4.1           # via django
-toml==0.10.2              # via pytest
-typed-ast==1.4.1          # via mypy
-typing-extensions==3.7.4.3  # via importlib-metadata, mypy
-urllib3==1.26.2           # via requests
-zipp==3.4.0               # via importlib-metadata
+asgiref==3.3.1
+    # via django
+attrs==20.3.0
+    # via pytest
+certifi==2020.12.5
+    # via requests
+chardet==4.0.0
+    # via requests
+debugpy==1.2.1
+    # via -r requirements.in
+django-cors-headers==3.6.0
+    # via -r requirements.in
+django==3.1.5
+    # via
+    #   -r requirements.in
+    #   django-cors-headers
+    #   djangorestframework
+djangorestframework==3.12.2
+    # via -r requirements.in
+flake8==3.8.4
+    # via -r requirements-dev.in
+idna==2.10
+    # via requests
+iniconfig==1.1.1
+    # via pytest
+json-log-formatter==0.3.0
+    # via -r requirements.in
+mccabe==0.6.1
+    # via flake8
+mypy-extensions==0.4.3
+    # via mypy
+mypy==0.790
+    # via -r requirements-dev.in
+packaging==20.8
+    # via pytest
+pluggy==0.13.1
+    # via pytest
+psycopg2-binary==2.8.6
+    # via -r requirements.in
+py==1.10.0
+    # via pytest
+pycodestyle==2.6.0
+    # via flake8
+pydantic==1.7.3
+    # via -r requirements.in
+pyflakes==2.2.0
+    # via flake8
+pyparsing==2.4.7
+    # via packaging
+pytest==6.2.1
+    # via -r requirements-dev.in
+python-json-logger==2.0.1
+    # via -r requirements.in
+pytz==2020.5
+    # via django
+requests==2.25.1
+    # via -r requirements-dev.in
+sqlparse==0.4.1
+    # via django
+toml==0.10.2
+    # via pytest
+typed-ast==1.4.2
+    # via mypy
+typing-extensions==3.7.4.3
+    # via mypy
+urllib3==1.26.2
+    # via requests
