feat: use the new renamed taito commands

--- a/package.json
+++ b/package.json
@@ -44,23 +44,23 @@
     "taito-host-cypress": "npm run taito-host-cypress:client",
     "taito-host-cypress:client": "cd client && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
     "taito-host-cypress:admin": "cd admin && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
-    "check-code": "docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate engines:install && docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate analyze",
-    "taito-host-check-code": "npm run check-code",
-    "_check-deps_comment": "TODO how to pass -u argument from check-deps to check-deps:TARGET?",
-    "check-deps": "npm-run-all \"check-deps:root {@}\" \"check-deps:admin {@}\" \"check-deps:client {@}\" \"check-deps:graphql {@}\" \"check-deps:server {@}\" \"check-deps:worker {@}\" \"check-deps:www {@}\" -- ",
-    "check-deps:root": "npm run _check-deps-script -- . ",
-    "check-deps:admin": "npm run _check-deps-script -- admin ",
-    "check-deps:client": "npm run _check-deps-script -- client ",
-    "check-deps:graphql": "npm run _check-deps-script -- graphql ",
-    "check-deps:server": "npm run _check-deps-script -- server ",
-    "check-deps:worker": "npm run _check-deps-script -- worker ",
-    "check-deps:www": "npm run _check-deps-script -- www ",
-    "check-deps-www-site": "npm run _check-deps-script -- www/site ",
-    "_check-deps-script": "sh -c 'echo --- ${0} --- && cd ${0} && (npm-check ${@} || :) && echo && echo \"NOTE: Many of the devDependencies and ~ references are actually in use even if reported unused. But all unused dependencies can usually be removed from package.json.\" && echo' ",
-    "check-size": "npm-run-all \"check-size:admin {@}\" \"check-size:client {@}\" -- ",
-    "check-size:admin": "cd admin && echo --- admin --- && npm run analyze -- ",
-    "check-size:client": "cd client && echo --- client --- && npm run analyze -- ",
-    "project-contacts": "cat PROJECT.md | sed -n -e '/^## Contacts.*$/,/^#.*$/{ /^## Contacts.*$/d; /^#.*$/d; p; }'",
+    "code-check": "docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate engines:install && docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate analyze",
+    "taito-host-code-check": "npm run code-check",
+    "_dep-check_comment": "TODO how to pass -u argument from dep-check to dep-check:TARGET?",
+    "dep-check": "npm-run-all \"dep-check:root {@}\" \"dep-check:admin {@}\" \"dep-check:client {@}\" \"dep-check:graphql {@}\" \"dep-check:server {@}\" \"dep-check:worker {@}\" \"dep-check:www {@}\" -- ",
+    "dep-check:root": "npm run _dep-check-script -- . ",
+    "dep-check:admin": "npm run _dep-check-script -- admin ",
+    "dep-check:client": "npm run _dep-check-script -- client ",
+    "dep-check:graphql": "npm run _dep-check-script -- graphql ",
+    "dep-check:server": "npm run _dep-check-script -- server ",
+    "dep-check:worker": "npm run _dep-check-script -- worker ",
+    "dep-check:www": "npm run _dep-check-script -- www ",
+    "dep-check-www-site": "npm run _dep-check-script -- www/site ",
+    "_dep-check-script": "sh -c 'echo --- ${0} --- && cd ${0} && (npm-check ${@} || :) && echo && echo \"NOTE: Many of the devDependencies and ~ references are actually in use even if reported unused. But all unused dependencies can usually be removed from package.json.\" && echo' ",
+    "size-check": "npm-run-all \"size-check:admin {@}\" \"size-check:client {@}\" -- ",
+    "size-check:admin": "cd admin && echo --- admin --- && npm run analyze -- ",
+    "size-check:client": "cd client && echo --- client --- && npm run analyze -- ",
+    "project-show": "cat PROJECT.md | sed -n -e '/^## Contacts.*$/,/^#.*$/{ /^## Contacts.*$/d; /^#.*$/d; p; }'",
     "precommit:branch": "if git-branch-is -q test || git-branch-is -q uat || git-branch-is -q qa || git-branch-is -q stag || git-branch-is -q canary || git-branch-is -q cana || git-branch-is -q prod || git-branch-is -q master; then echo 'ERROR: You cannot commit changes directly to this environment branch. Only fast-forward merge is allowed.' && echo && exit 1; fi",
     "precommit:lint": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
     "release-pre:prod": "semantic-release --dry-run",
