--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -13,7 +13,7 @@ global:
   logLevel: info    # trace, debug, info, warn, error, fatal
   registry: ${taito_container_registry}
   imagePullPolicy: ''
-  debug: false
+  debug: 'false'
 
 full-stack:
   networkPolicyEnabled: true
