--- a/www/Dockerfile.build
+++ b/www/Dockerfile.build
@@ -10,13 +10,7 @@ COPY ${SERVICE_DIR}/*.sh \
      /develop/
 
 ENV NODE_ENV development
-ENV BASE_PATH BASE_PATH
-ENV ASSETS_PATH ASSETS_PATH
-ENV ASSETS_DOMAIN ASSETS_DOMAIN
-ENV API_ROOT ''
-ENV API_URL /api
 ENV APP_SENTRY_PUBLIC_DSN #sentryPublicDSN
-
 RUN ./install.sh
 RUN cp ~/.bashrc /home/node/.bashrc
 RUN mkdir -p /build && \
@@ -33,9 +27,9 @@ RUN . ~/.bashrc && \
 
 # Force no docker caching during build
 # -> required only if data is retrieved from a CMS during build
-# ARG BUILD_IMAGE_TAG
-# ENV BUILD_IMAGE_TAG ${BUILD_IMAGE_TAG}
-# RUN echo "${BUILD_IMAGE_TAG}"
+ARG BUILD_IMAGE_TAG
+ENV BUILD_IMAGE_TAG ${BUILD_IMAGE_TAG}
+RUN echo "${BUILD_IMAGE_TAG}"
 
 # Build and test site
 RUN npm run build && \
