feat(django): serve static files

--- a/alternatives/server-django/nginx.conf
+++ b/alternatives/server-django/nginx.conf
@@ -2,6 +2,10 @@ server {
     listen 8080 default_server;
     listen [::]:8080 default_server;
 
+    location /static {
+        alias /service/src/static;
+    }
+
     location / { try_files $uri @uwsgi; }
     location @uwsgi {
         include uwsgi_params;
