--- a/client/.babelrc
+++ b/client/.babelrc
@@ -20,8 +20,7 @@
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-proposal-class-properties",
     "babel-plugin-styled-components",
-    "macros",
-    "react-hot-loader/babel"
+    "macros"
   ],
 
   "env": {
