fix(django): fix uwsgi.ini module path

--- a/alternatives/server-django/uwsgi.ini
+++ b/alternatives/server-django/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
-# TODO: make Dockerfile.build work, then set this
-module = src:create_app()
+chdir = /service/src
+module = app.wsgi:application
 
 master = true
 processes = 3
