--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -32,7 +32,7 @@ full-stack:
     basicAuthEnabled: ${taito_basic_auth_enabled}
     basicAuthHtpasswdSecret: ${taito_project}-${taito_env}-basic-auth
     modsecurityEnabled: true
-    serviceAccountRoles: [ "taito-restricted-pod" ]
+    serviceAccountName: ${taito_project}-${taito_env}
     # Horizontal scaling
     replicas: ${kubernetes_replicas}
     minReplicas: ${kubernetes_replicas}
